fix get all rooms
